--- a/style.css
+++ b/style.css
@@ -71,7 +71,10 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     text-align: center;
-    padding: 0.5rem;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 p {
@@ -86,4 +89,18 @@ span {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     border-radius: 1rem;
+}
+
+.hero {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.hero__text {
+    text-align: start;
+}
+
+small {
+    margin-bottom: 0.125rem;
+    display: block;
 }
